Events calendar page1, fixed spacer spacing a little too much into space

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -30,8 +30,8 @@ a, a:link, a:visited{
   margin-left: -0.5rem !important;
 }
 
-.spacer-20vh{
-  min-height: 20vh;
+.spacer{
+  min-height: 7.25rem;
   background-color: $light;
 }
 h1 {
